--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,11 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              {
+                "input": "node_modules/document-register-element/build/document-register-element.js"
+              }
+            ]
           },
           "configurations": {
             "production": {
@@ -114,6 +118,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "angularElementsTest"
 }
