--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "bootstrap": "^4.4.1",
-    "concat": "^1.0.3",
     "document-register-element": "^1.7.2",
-    "fs-extra": "^8.1.0",
+    "ngx-build-plus": "^9.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
