--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:elements": "ng build --prod --output-hashing none && node elements-build.js",
+    "build:elements": "ng build --prod --output-hashing none --single-bundle true && cp ./test.html ./dist/index.html",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
